<resources>
    <string name="app_name">Things Inbox</string>

    <string name="todo_title_hint">Add title</string>
    <string name="todo_notes_hint">Add notes</string>
    <string name="todo_subtasks_hint">Add subtasks, separated by lines</string>
    <string name="todo_tags_hint">Add tags</string>
    <string name="todo_list_hint">Add a project or area</string>
    <string name="todo_deadline_hint">Add a deadline</string>

    <string name="email_todo_subject">Import this To-Do (%1$s)</string>

    <string name="send_button">Send as Email</string>

    <string name="action_send">Send</string>
    <string name="action_settings">Settings</string>

    <string-array name="date_choice_array">
        <item>Inbox</item>
        <item>Today</item>
        <item>Tomorrow</item>
        <item>Evening</item>
        <item>Anytime</item>
        <item>Someday</item>
        <item>Custom Date…</item>
    </string-array>
    <string-array name="date_values_array">
        <item></item>
        <item>today</item>
        <item>tomorrow</item>
        <item>evening</item>
        <item>anytime</item>
        <item>someday</item>
        <item>custom</item>
    </string-array>
    <string-array name="project_area_choice">
        <item>Project/Area…</item>
        <item>No Project/Area</item>
        <item>Project…</item>
        <item>Area…</item>
    </string-array>
    <string name="title_activity_settings">Settings</string>
    <string name="projects_areas"><![CDATA[Projects & Areas]]></string>
    <string name="tags">Tags</string>
    <string name="email_title">\"Mail to Things\" Address</string>
    <string name="email_hint">e.g. add-to-things-xxxx@things.email</string>
    <string name="lists_hint">One line for each</string>
    <string name="tags_hint">One line for each</string>
    <string name="welcome_title">Welcome to Things Companion!</string>
    <string name="skip">Skip</string>
    <string name="welcome_subtitle">Let\'s quickly set up some preferences...</string>
    <string name="help_title">Get Help or Buy Developer a Beer</string>
    <string name="help_summary">Contact deltau.app@gmail.com</string>
    <string name="first_run">First Run?</string>
</resources>
