<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:divider="@drawable/divider"
    android:dividerPadding="16dp"
    android:showDividers="middle">

    <EditText
        android:id="@+id/et_todo_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:hint="@string/todo_title_hint"
        android:inputType="textCapSentences"
        android:padding="16dp"
        android:paddingStart="60dp"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_todo_notes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:background="@null"
        android:hint="@string/todo_notes_hint" />

    <EditText
        android:id="@+id/et_todo_subtasks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:background="@null"
        android:hint="@string/todo_subtasks_hint" />

    <Spinner
        android:id="@+id/sp_date_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:spinnerMode="dropdown"
        tools:entries="@array/date_choice_array"/>

    <EditText
        android:id="@+id/et_deadline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Deadline - coming soon"
        android:padding="16dp"
        android:background="@null"/>

    <EditText
        android:id="@+id/et_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/list_hint"
        android:padding="16dp"
        android:background="@null"/>

    <EditText
        android:id="@+id/et_tags"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tags_hint"
        android:padding="16dp"
        android:background="@null"/>

</LinearLayout>
</ScrollView>